# freetype

./: .travis.yml  README.adoc  README.md  appveyor.yml  version.txt
.github/workflows/: ci.yml
android/: build.gradle  freetype-$(version).pom.in  freetype2-$(version).pom  freetype2-2.10.1.pom  libfreetype-1.0.0.pom  libfreetype2-1.0.0.pom  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/freetype/: CMakeLists.txt  build.gradle
android/freetype/src/main/: AndroidManifest.xml
android/freetype2/: CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/libfreetype2/: build.gradle
cocoapods/: freetype.podspec.in  freetype2.podspec.in  freetype2_igagis.podspec.in  freetype_igagis.podspec.in
config/: emsc.mk  rel.mk
config/base/: base.mk
include/freetype/config/: ftmodule.h
msvs_solution/: msvs_solution.sln
msvs_solution/freetype/: freetype.vcxproj  freetype.vcxproj.filters
nuget/: build_nuget.ps1  nuget.autopkg.in
src/: makefile
xcode/: Podfile
xcode/freetype/freetype.xcodeproj/: project.pbxproj
xcode/freetype/freetype.xcodeproj/project.xcworkspace/xcuserdata/ivan.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/freetype/freetype.xcodeproj/xcuserdata/ivan.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/freetype2/freetype2.xcodeproj/: project.pbxproj
xcode/freetype2/freetype2.xcodeproj/project.xcworkspace/xcuserdata/ivan.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/freetype2_igagis/freetype2_igagis.xcodeproj/xcuserdata/ivan.xcuserdatad/xcschemes/: xcschememanagement.plist
